--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Rock paper scissors</title>
-  <link href="game.css" rel="stylesheet" type="text/css" />  
+  <link href="style.css" rel="stylesheet" type="text/css" />  
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 
 
   </div>
-  <script src="game.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
